2005-10-12  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java (SourceWindow): Now takes an array of possible
	paths to glade files as well as a path for image files.

2005-10-11  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMTestDOMFrysk.java: add testDOMLine method
				change name of getLineNum1 method to getLine
				added test for DOMLine.getLineNum
				added test for DOMLine.getLength
				
	* dom/DOMSource.java: change getLineNum1 name to getLine
				change END_ATTR to LENGTH_ATTR from DOMLine
				rename getLineNum1 to getLineNum & comment out
				  old getLineNum for now, may delete later
				  
	* dom/DOMLine.java: comment out *possibly* unneeded constructors
					fix getLength method

2005-10-11  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMImage.java: change LINENO_ATTR to use NUMBER_ATTR from DOMSource
	
	* dom/DOMLine.java: added LENGTH_ATTR variable
	
	* dom/DOMSource.java: Use variables from DOMLine instead of local ones
					add getLineNum1 method as alternative to getLineNum
					
	* dom/DOMTestDOMFrysk.java: add test for getLineNum1 method

2005-10-11  Adam Jocksch  <ajocksch@redhat.com>

	* glade: Moved all glade files (frysk_source.glade{p},
	frysk_source_prefs.glade{p}) to ../glade.

2005-10-11  Adam Jocksch  <ajocksch@redhat.com>

	* testfiles: Added.

	* testfiels/test.cpp: Added.

	* testfiels/test2.cpp: Added.

	* testfiles/test3.cpp: Added.

	* testfiles/test4.cpp: Added.

	* testfiles/test5.cpp: Added.

2005-10-11  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java (createActions): Accelerators are now added to 
	each action.
	(createMenus): Removed commented out accelerator code.
	(createToolbar): Removed unnecessary comments.

2005-10-10  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMSource.java: modded getLines() method
	
	* dom/DOMTestDOMFrysk.java: added test for getLines() method

2005-10-10  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMSource.java: screw-up, missed checking it in with the below entry
